se agregó el formulario

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
     <title>Jabonarte | Inicio</title>
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0&appId=305679140520&autoLogAppEvents=1"
+      nonce="fbqVFcP3"
+    ></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
