--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <title>Jabonarte | Inicio</title>
+    <title>Jabonarte | Cosmética Natural</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
